--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 
-<a>Flatiron School</a>
-<a href="https://flatironschool.com">Flatiron School</a>
+<!-- <a>Flatiron School</a> -->
+<a href='https://flatironschool.com'>Flatiron School</a>
